--- a/notes/tableau.tex
+++ b/notes/tableau.tex
@@ -1,7 +1,9 @@
-% nta : la idea es "deshacer" el documento de herramientas en distintas secciones, para efectos de mejorar los índices
+% nta: la idea es "deshacer" el documento de herramientas en distintas secciones, para efectos de mejorar los índices
 % idealmente, aquí iría más información de dataviz como ejemplos, paneles y quizá informes
 
 \section{Tableau}
-Tableau es una plataforma de análisis y de inteligencia de negocios (BI), que permite visualizar datos, principalmente a través de \textbf{Visualizaciones Dinámicas} : visualizaciones interactivas o que cambian con el tiempo
+Tableau es una plataforma de análisis y de inteligencia de negocios (BI), que permite visualizar datos, principalmente a través de \textbf{Visualizaciones Dinámicas}: visualizaciones interactivas o que cambian con el tiempo
 
 Además de los elementos de \textit{DataViz} más comunes, Tableau ofrece \textbf{tablas resaltadas (con formato condicional), mapas térmicos, mapas de densidad, diagramas gantt}, entre otros. Además, similar a SQL, permite combinar datos a través de JOINs
+
+\newpage
