--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -5,36 +5,29 @@ La \textbf{toma de decisiones inspirada en datos} implica utilizar estos hechos 
 
 \paragraph{Fases del Ciclo}
 \begin{itemize}
-    \item {\textbf{\textit{Planning} - Planificación} :
+    \item {\textbf{\textit{Planning} - Planificación}:
     \begin{itemize}
         \item {Características de los datos a tomar: qué tipo, cómo obtenerlos, quién los administra, resultados óptimos}
         \item {Qué tipos de datos se necesitan? Cómo se gestionarán? Quién será el responsable de ellos}
     \end{itemize}}
-    \item {\textbf{\textit{Capture} - Captura} : Recolección de datos a través de diferentes herramientas y fuentes como entrevistas, observaciones, \textit{cookies}, formularios, cuestionarios, encuestas y sets preexistentes de datos. Una mala fuente de datos es sesgada, incompleta e incorrecta. Una \textbf{buena fuente de datos} tiene las siguientes características
-    \begin{itemize}
-            \item {\textit{\textbf{R} eliable} - Confiable}
-            \item {\textit{\textbf{O} riginal}}
-            \item {\textit{\textbf{C} omprehensive - Exhaustivo}}
-            \item {\textit{\textbf{C} urrent} - Actual}
-            \item {\textit{\textbf{C} ited} - Citado}
-        \end{itemize}}
-    \item {\textbf{\textit{Manage} - Mantención} :
+    \item {\textbf{\textit{Capture} - Captura}: Recolección de datos a través de diferentes herramientas y fuentes como entrevistas, observaciones, \textit{cookies}, formularios, cuestionarios, encuestas y sets preexistentes de datos. Una mala fuente de datos es sesgada, incompleta e incorrecta. Una \textbf{buena fuente de datos} es \textbf{Confiable, Original, Exhaustiva, Actual y Citada (\textit{Reliable, Original, Comprehensive, Current, Cited [ROCCC]})}}
+    \item {\textbf{\textit{Manage} - Mantención}:
     \begin{itemize}
         \item {Cuidado de los datos, almacenamiento y seguridad}
         \item {Cómo y dónde se almacenan? Qué herramientas se usan para hacerlo?}
         \item {\textit{No corresponde limpieza, ya que es una tarea del analista y no una parte del ciclo de vida}}
     \end{itemize}}
-    \item {\textbf{\textit{Analyze} - Análisis} :
+    \item {\textbf{\textit{Analyze} - Análisis}:
     \begin{itemize}
         \item {Resolución del problema utilizando los datos}
         \item {Uso de los datos para respaldar objetivos empresariales y tomar decisiones}
     \end{itemize}}
-    \item {\textbf{\textit{Archive} - Archivar} :
+    \item {\textbf{\textit{Archive} - Archivar}:
     \begin{itemize}
         \item {Almacenar los datos en un lugar donde estén disponible para referencias futuras y a largo plazo}
         \item {Pueden o no ser usados de nuevo}
     \end{itemize}}
-    \item {\textbf{\textit{Destroy} - Destrucción} :
+    \item {\textbf{\textit{Destroy} - Destrucción}:
     \begin{itemize}
        \item {Eliminar los datos y las copias compartidas}
        \item {Se destruye la documentación en papel, o se realiza limpieza de discos duros, servidores y bases de datos}
