--- a/notes/spreadsheet.tex
+++ b/notes/spreadsheet.tex
@@ -8,60 +8,60 @@ Las hojas de cálculo pueden bloquearse para prevenir cambios por otros usuarios
 \paragraph{Herramientas Comunes}
 Toda fórmula se comienza escribiendo '='. Al hacerlo, se despliega un menú que incluye fórmulas, nombres y \gls{str}. Se incluyen ejemplos de \gls{syntx} para \textcolor{blue}{fórmulas} y \textcolor{ForestGreen}{funciones}. Después de aplicar una fórmula, se recomienda copiar y pegar la información generada para convertirla en datos estáticos
 \begin{itemize}
-    \item {\textbf{Llenado Automático} : Presente como un cuadrado en la esquina inferior derecha de la celda, se arrastra y llena celdas vacías con el contenido y referencias de la celda inicial}
-    \item {\textbf{Remover Duplicados} : Busca y elimina automáticamente aquellas entradas que podrían estar duplicadas} 
-    \item {\textbf{Buscar y Reemplazar} : Herramienta que busca por un término específico y lo reemplaza por otro determinado}
-    \item {\textbf{Ordenar por Hoja} : Ordena todos los datos de la hoja de acuerdo al ranking de una columna en específico. \textbf{Los datos a través de un registro se mantienen juntos}}
-    \item {\textbf{Ordenar por Rango} : Ordena solamente las celdas especificadas en una columna. El resto de la hoja se desordena}
-    \item {\textbf{Formateo Condicional} : Cambia la estética de las celdas cuando sus valores cumplen con condiciones especificadas
+    \item {\textbf{Llenado Automático}: Presente como un cuadrado en la esquina inferior derecha de la celda, se arrastra y llena celdas vacías con el contenido y referencias de la celda inicial}
+    \item {\textbf{Remover Duplicados}: Busca y elimina automáticamente aquellas entradas que podrían estar duplicadas} 
+    \item {\textbf{Buscar y Reemplazar}: Herramienta que busca por un término específico y lo reemplaza por otro determinado}
+    \item {\textbf{Ordenar por Hoja}: Ordena todos los datos de la hoja de acuerdo al ranking de una columna en específico. \textbf{Los datos a través de un registro se mantienen juntos}}
+    \item {\textbf{Ordenar por Rango}: Ordena solamente las celdas especificadas en una columna. El resto de la hoja se desordena}
+    \item {\textbf{Formateo Condicional}: Cambia la estética de las celdas cuando sus valores cumplen con condiciones especificadas
         \begin{itemize}
-            \item {Seleccionar "formato condicional" en el menú "formato" > elegir el rango, reglas y estilo de formato}
+            \item {Seleccionar "formato condicional" en el menú "formato"  elegir el rango, reglas y estilo de formato}
             \item {Es posible utilizar más de una regla a la vez}
             \item {Se puede combinar Formateo Condicional con Validación de Datos}
         \end{itemize}}
-    \item {\textbf{Validación de Datos} : 
+    \item {\textbf{Validación de Datos}: 
     \begin{itemize}
         \item {Asigna un menú desplegable a una columna entera. \textit{Seleccionar columna > 'data' > 'validación de datos' > crear criterios (si es una lista de criterios, separar por coma)}}
         \item {Crear casillas de verificación}
         \item {Crear lista de valores fijos para seleccionar}   
     \end{itemize}} 
-    \item {\textcolor{ForestGreen}{\textbf{SPLIT}} : Función que divide el texto en base a un caracter, y guarda cada fragmento en una celda nueva. El caracter es un \textbf{delimitador} y puede ser un espacio, coma, guiones, entre otros}
-    \item {\textcolor{ForestGreen}{\textbf{MATCH}} : Función que se utiliza para ubicar la posición de un valor específico a buscar}
-    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}} : Función que une múltiples \gls{str} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}. Para dos valores, CONCAT es suficiente}
-    \item {\textcolor{ForestGreen}{\textbf{=LEN(rango)}} : Cuenta el número de caracteres que contiene un \gls{str} dado. \textit{ej =LEN(A21) devuelve el largo del string en la celda A21}}
+    \item {\textcolor{ForestGreen}{\textbf{SPLIT}}: Función que divide el texto en base a un caracter, y guarda cada fragmento en una celda nueva. El caracter es un \textbf{delimitador} y puede ser un espacio, coma, guiones, entre otros}
+    \item {\textcolor{ForestGreen}{\textbf{MATCH}}: Función que se utiliza para ubicar la posición de un valor específico a buscar}
+    \item {\textcolor{ForestGreen}{\textbf{=CONCATENATE(item1,item2...)}}: Función que une múltiples \gls{str} en uno solo. \textit{ej =CONCATENATE("text",'' '',"string") devuelve "text string"}. Para dos valores, CONCAT es suficiente}
+    \item {\textcolor{ForestGreen}{\textbf{=LEN(rango)}}: Cuenta el número de caracteres que contiene un \gls{str} dado. \textit{ej =LEN(A21) devuelve el largo del string en la celda A21}}
     \item {\textcolor{ForestGreen}{\textbf{=LEFT}} \& \textcolor{ForestGreen}{\textbf{=RIGHT}}: Extrae un conjunto de caracteres a la izquierda o derecha de un \gls{str} determinado}
-    \item {\textcolor{ForestGreen}{\textbf{=MID(rango,punto\_referencia,cant\_char)}} : Extrae un segmento de \gls{str} desde el medio. \textit{ej =MID(C3,4,5) devuelve un string de 5 caracteres que empezó en la posición 4 del string inicial ubicado en la celda C3}}
-    \item {\textcolor{ForestGreen}{\textbf{=TRIM(rango)}} : Remueve los espacios iniciales, finales y repetidos de un \gls{str}. \textit{ej =TRIM('' a esto le sobran espacios  '') devuelve ''a esto le sobran espacios''}}
-    \item {\textcolor{ForestGreen}{\textbf{=VLOOKUP(valor,''nombre\_ubicacion'',rango,columna(n°),FALSE)}} : \textit{Vertical Lookup}, busca un valor en una columna numerada (A=1, B=2,...), para devolver otro valor correspondiente. Usar TRUE para coincidencias similares, FALSE para coincidencias exactas. \textit{VLOOKUP tiene problemas con extra espacios: aplicar TRIM para eliminarlos; en presencia de duplicados o más repeticiones, devolverá la primera coincidencia que encuentre de izquierda a derecha, de arriba a abajo}. \textbf{Esta es una herramienta de agregación}}
-    \item {\textcolor{ForestGreen}{\textbf{=VALUE(rango)}} : convierte el rango seleccionado a valores numéricos}
-    \item {\textcolor{ForestGreen}{\textbf{=IMPORTRANGE(sheet\_url,range\_str)}} : Importa datos desde una hoja de cálculo a otra, con actualización automática ante cualquier cambio}
-    \item {\textcolor{ForestGreen}{\textbf{=QUERY(sheet+range,"SQL CLAUSE")}} : Pseudo instrucción SQL, puede funcionar como asistente para importación de datos}
-    \item {\textcolor{ForestGreen}{\textbf{=FILTER(range,cond1,cond2...)}} : Muestra datos que cumplen con una o más condiciones en un rango específico. \textit{A diferencia de \textcolor{ForestGreen}{QUERY}}, no puede combinarse con otras funciones en pos de cálculos más complejos}
-    \item {\textcolor{ForestGreen}{\textbf{=SORT(rango, col*,TRUE/FALSE)}} : Ordena el rango definido utilizando una columna de referencia en modo numérico (1 para A, 2 para B...) en orden ascendente (TRUE) o descendente (FALSE). \textbf{A diferencia de las opciones Ordenar por Hoja y Ordenar por Rango, esto si modifica el set de datos completo}}
-    \item {\textcolor{ForestGreen}{\textbf{=CONVERT(celda,'formato\_inicial','formato\_final')}} : Cambia el formato de una celda. \textit{Revisar los formatos de cambio para excel o sheets}}
+    \item {\textcolor{ForestGreen}{\textbf{=MID(rango,punto\_referencia,cant\_char)}}: Extrae un segmento de \gls{str} desde el medio. \textit{ej =MID(C3,4,5) devuelve un string de 5 caracteres que empezó en la posición 4 del string inicial ubicado en la celda C3}}
+    \item {\textcolor{ForestGreen}{\textbf{=TRIM(rango)}}: Remueve los espacios iniciales, finales y repetidos de un \gls{str}. \textit{ej =TRIM('' a esto le sobran espacios  '') devuelve ''a esto le sobran espacios''}}
+    \item {\textcolor{ForestGreen}{\textbf{=VLOOKUP(valor,''nombre\_ubicacion'',rango,columna(n°),FALSE)}}: \textit{Vertical Lookup}, busca un valor en una columna numerada (A=1, B=2,...), para devolver otro valor correspondiente. Usar TRUE para coincidencias similares, FALSE para coincidencias exactas. \textit{VLOOKUP tiene problemas con extra espacios: aplicar TRIM para eliminarlos; en presencia de duplicados o más repeticiones, devolverá la primera coincidencia que encuentre de izquierda a derecha, de arriba a abajo}. \textbf{Esta es una herramienta de agregación}}
+    \item {\textcolor{ForestGreen}{\textbf{=VALUE(rango)}}: convierte el rango seleccionado a valores numéricos}
+    \item {\textcolor{ForestGreen}{\textbf{=IMPORTRANGE(sheet\_url,range\_str)}}: Importa datos desde una hoja de cálculo a otra, con actualización automática ante cualquier cambio}
+    \item {\textcolor{ForestGreen}{\textbf{=QUERY(sheet+range,"SQL CLAUSE")}}: Pseudo instrucción SQL, puede funcionar como asistente para importación de datos}
+    \item {\textcolor{ForestGreen}{\textbf{=FILTER(range,cond1,cond2...)}}: Muestra datos que cumplen con una o más condiciones en un rango específico. \textit{A diferencia de \textcolor{ForestGreen}{QUERY}}, no puede combinarse con otras funciones en pos de cálculos más complejos}
+    \item {\textcolor{ForestGreen}{\textbf{=SORT(rango, col*,TRUE/FALSE)}}: Ordena el rango definido utilizando una columna de referencia en modo numérico (1 para A, 2 para B...) en orden ascendente (TRUE) o descendente (FALSE). \textbf{A diferencia de las opciones Ordenar por Hoja y Ordenar por Rango, esto si modifica el set de datos completo}}
+    \item {\textcolor{ForestGreen}{\textbf{=CONVERT(celda,'formato\_inicial','formato\_final')}}: Cambia el formato de una celda. \textit{Revisar los formatos de cambio para excel o sheets}}
 \end{itemize}
 
 \paragraph{Funciones con Condicionales}
 Para ciertas funciones, es posible añadir el sufijo IF para tomar ciertos argumentos bajo criterios definidos. Generalmente tienen variaciones en plural IFS, que aceptan más de un set de condiciones siguiendo el orden de los argumentos
 \begin{itemize}
-    \item{\textcolor{ForestGreen}{\textbf{=SUM(rango)}} : Suma todos los valores en un rango}
-    \item {\textcolor{ForestGreen}{\textbf{=SUMIF(rango,''condicion'',columna\_asumar)}} : Añade los datos numéricos de una columna en base a alguna condición en un rango en específico}
-    \item {\textcolor{ForestGreen}{\textbf{=AVERAGE(rango)}} : Calcula el promedio de un rango con valores numéricos}
-    \item {\textcolor{ForestGreen}{\textbf{=MAX(rango)}} : Entrega el máximo valor en un rango}
-    \item {\textcolor{ForestGreen}{\textbf{=MAXIF(rango\_max,rango\_marc,condicion)}} : Busca el máximo para un rango, en base a si cierto rango marcado cumple una condición}
-    \item {\textcolor{ForestGreen}{\textbf{=COUNTA(rango)}} : Cuenta el total de valores de cualquier tipo dentro de un rango especificado}
-    \item {\textcolor{ForestGreen}{\textbf{=COUNT(rango)}} : Cuenta el total de valores numéricos o fechas dentro de un rango específico}
-    \item {\textcolor{ForestGreen}{\textbf{=COUNTIF(rango,"valor\_comillas")}} : Cuenta el número de celdas, dentro de un rango determinado que cumplen con una condición. Es posible entregar una celda en vez del criterio, y se usa su contenido. \textit{ej =COUNTIF(A2:A30,'${\geq}$10') devuelve la cantidad de valores que son iguales o mayores a 10}}
+    \item{\textcolor{ForestGreen}{\textbf{=SUM(rango)}}: Suma todos los valores en un rango}
+    \item {\textcolor{ForestGreen}{\textbf{=SUMIF(rango,''condicion'',columna\_asumar)}}: Añade los datos numéricos de una columna en base a alguna condición en un rango en específico}
+    \item {\textcolor{ForestGreen}{\textbf{=AVERAGE(rango)}}: Calcula el promedio de un rango con valores numéricos}
+    \item {\textcolor{ForestGreen}{\textbf{=MAX(rango)}}: Entrega el máximo valor en un rango}
+    \item {\textcolor{ForestGreen}{\textbf{=MAXIF(rango\_max,rango\_marc,condicion)}}: Busca el máximo para un rango, en base a si cierto rango marcado cumple una condición}
+    \item {\textcolor{ForestGreen}{\textbf{=COUNTA(rango)}}: Cuenta el total de valores de cualquier tipo dentro de un rango especificado}
+    \item {\textcolor{ForestGreen}{\textbf{=COUNT(rango)}}: Cuenta el total de valores numéricos o fechas dentro de un rango específico}
+    \item {\textcolor{ForestGreen}{\textbf{=COUNTIF(rango,"valor\_comillas")}}: Cuenta el número de celdas, dentro de un rango determinado que cumplen con una condición. Es posible entregar una celda en vez del criterio, y se usa su contenido. \textit{ej =COUNTIF(A2:A30,'${\geq}$10') devuelve la cantidad de valores que son iguales o mayores a 10}}
     
     
 \end{itemize}
 
 \begin{description}
-    \item[Celda]{ : Posición descrita usando filas \textbf{o registros/\textit{records}} y columnas \textbf{o campos/\textit{fields}}. \textit{Ejemplo : columna A fila 3 = A3}. 
+    \item[Celda]{: Posición descrita usando filas \textbf{o registros/\textit{records}} y columnas \textbf{o campos/\textit{fields}}. \textit{Ejemplo: columna A fila 3 = A3}. 
     \item {Para referenciar otras hojas de cálculo, se utilizan apóstrofes simples, terminadas con un signo de exclamación, seguidas del rango a referenciar. \textit{`otra\_hoja`!ra:ngo}}
     \begin{description}
-        \item[Referencia Relativa]{ : El valor de la celda cambia junto con la fórmula donde está presente, al arrastrarla o copiarla en otro lugar}
-        \item[Referencia Absoluta]{ : El valor de la celda es fijo y no cambia con movimientos en fórmulas o celdas.\textit{Para realizar cambio entre absoluto y relativo, presionar F4}}
+        \item[Referencia Relativa]{: El valor de la celda cambia junto con la fórmula donde está presente, al arrastrarla o copiarla en otro lugar}
+        \item[Referencia Absoluta]{: El valor de la celda es fijo y no cambia con movimientos en fórmulas o celdas.\textit{Para realizar cambio entre absoluto y relativo, presionar F4}}
         \begin{table}
             \centering
             \begin{tabular}{|p{5cm}|p{4.5cm}|p{4.5cm}|}
@@ -77,18 +77,18 @@ Para ciertas funciones, es posible añadir el sufijo IF para tomar ciertos argum
             \end{tabular}
         \end{table}
     \end{description}}
-    \item[Fórmulas y Funciones]{ : 
+    \item[Fórmulas y Funciones]{: 
     \begin{description}
-        \item {No todas las funciones requieren operadores. \textit{Ejemplos : SUM, AVERAGE, COUNT, MIN, MAX}}
-        \item[Errores Comunes]{ : 
+        \item {No todas las funciones requieren operadores. \textit{Ejemplos: SUM, AVERAGE, COUNT, MIN, MAX}}
+        \item[Errores Comunes]{: 
         \begin{itemize}
-            \item {\textbf{\#DIV/0!} : Intento de dividir por cero o por una celda vacía}
-            \item {\textbf{\#ERROR()} : Fórmula no puede ser interpretada como input. \textit{Parsing error}}
-            \item {\textbf{\#N/A} : Los datos a usar en la fórmula no se encuentran en la hoja}
-            \item {\textbf{\#NAME?} : No se entiende el nombre de la fórmula o función}
-            \item {\textbf{\#NUM!} : Los cálculos de la fórmula o función no pueden realizarse}
-            \item {\textbf{\#VALUE!} : Error general para problemas con fórmulas o referencias de celda}
-            \item {\textbf{\#REF!} : Una fórmula referencia una celda no válida o eliminada}
+            \item {\textbf{\#DIV/0!}: Intento de dividir por cero o por una celda vacía}
+            \item {\textbf{\#ERROR()}: Fórmula no puede ser interpretada como input. \textit{Parsing error}}
+            \item {\textbf{\#N/A}: Los datos a usar en la fórmula no se encuentran en la hoja}
+            \item {\textbf{\#NAME?}: No se entiende el nombre de la fórmula o función}
+            \item {\textbf{\#NUM!}: Los cálculos de la fórmula o función no pueden realizarse}
+            \item {\textbf{\#VALUE!}: Error general para problemas con fórmulas o referencias de celda}
+            \item {\textbf{\#REF!}: Una fórmula referencia una celda no válida o eliminada}
         \end{itemize}} 
     \end{description}}
 \end{description}
