final edits on graphs

--- a/finalproject_1/notebook_1.Rmd
+++ b/finalproject_1/notebook_1.Rmd
@@ -101,24 +101,24 @@ library(tidyverse)
 library(ggplot2)
 
 datos <- data.frame (
-  meses = c("Ene", "Feb", "Mar", "Abr", "May", "Jun", 
+  meses <- c("Ene", "Feb", "Mar", "Abr", "May", "Jun", 
              "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"),
-  totales = c(144873, 223164, 301687, 415025, 609493, 710721,
+  totales <- c(144873, 223164, 301687, 415025, 609493, 710721,
               748962, 755639, 821276, 616281, 335075, 178372)
 )
 
-ggplot(datos, aes(x=factor(meses, levels=unique(meses)), y=totales)) + 
-  geom_bar(position="dodge", stat="identity", fill= "aquamarine4") +
-  scale_y_continuous(limits = c(0,850000), n.breaks=7) + 
+ggplot(datos, aes(x = factor(meses, levels = unique(meses)), y = totales)) + 
+  geom_bar(position = "dodge", stat = "identity", fill = "aquamarine4") +
+  scale_y_continuous(limits = c(0,850000), n.breaks = 7) + 
   ggtitle("Viajes Registrados por Mes, año 2024",
-          subtitle="Total de Filas por archivo .csv") +
+          subtitle = "Total de Filas por archivo .csv") +
   xlab("Mes del Año") +
   ylab("Total de Filas") +
-  geom_text(label=totales, size=2, vjust = 2, color ="white")+
+  geom_text(label = totales, size = 2, vjust = 2, color = "white")+
   theme_bw() +
   theme(
     plot.title = element_text(hjust = 0.5),
-    plot.subtitle = element_text(hjust=0.5),
+    plot.subtitle = element_text(hjust = 0.5),
         )
 
 ```
